--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="write_your_massage">Write your massage</string>
     <string name="send">Send</string>
     <string name="promo_title">Week promotion</string>
+    <string name="add_to_wish_list">Add to Wish List</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
